--- a/gitWithVS/gitWithVS.csproj
+++ b/gitWithVS/gitWithVS.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NewClass.cs" />
+    <Compile Include="NewClass2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
